// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetTypesSelector should render correctly with no target types 1`] = `
.c1.c1 {
  width: 18px;
  height: 18px;
}

.c0.c0 {
  margin-top: 5px;
}

.c0 label {
  padding-right: 10px;
}

<TargetTypesSelector
  onChange={[MockFunction]}
  targetTypes={Set {}}
>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  && {
    margin-top: 5px;
  }

  label {
    padding-right: 10px;
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <label>
          <styled.input
            checked={false}
            data-test="galaxy"
            onChange={[Function]}
            value="Galaxy"
          >
            <StyledComponent
              checked={false}
              data-test="galaxy"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "className": "checkbox",
                      "type": "checkbox",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  && {
    width: 18px;
    height: 18px;
  }
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onChange={[Function]}
              value="Galaxy"
            >
              <input
                checked={false}
                className="checkbox c1"
                data-test="galaxy"
                onChange={[Function]}
                type="checkbox"
                value="Galaxy"
              />
            </StyledComponent>
          </styled.input>
          Galaxy
        </label>
        <label>
          <styled.input
            checked={false}
            data-test="ism"
            onChange={[Function]}
            value="ISM"
          >
            <StyledComponent
              checked={false}
              data-test="ism"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "className": "checkbox",
                      "type": "checkbox",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  && {
    width: 18px;
    height: 18px;
  }
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onChange={[Function]}
              value="ISM"
            >
              <input
                checked={false}
                className="checkbox c1"
                data-test="ism"
                onChange={[Function]}
                type="checkbox"
                value="ISM"
              />
            </StyledComponent>
          </styled.input>
          ISM
        </label>
        <label>
          <styled.input
            checked={false}
            data-test="solar-system-body"
            onChange={[Function]}
            value="Solar System Body"
          >
            <StyledComponent
              checked={false}
              data-test="solar-system-body"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "className": "checkbox",
                      "type": "checkbox",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  && {
    width: 18px;
    height: 18px;
  }
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onChange={[Function]}
              value="Solar System Body"
            >
              <input
                checked={false}
                className="checkbox c1"
                data-test="solar-system-body"
                onChange={[Function]}
                type="checkbox"
                value="Solar System Body"
              />
            </StyledComponent>
          </styled.input>
          Solar System Body
        </label>
        <label>
          <styled.input
            checked={false}
            data-test="star"
            onChange={[Function]}
            value="Star"
          >
            <StyledComponent
              checked={false}
              data-test="star"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "className": "checkbox",
                      "type": "checkbox",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  && {
    width: 18px;
    height: 18px;
  }
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onChange={[Function]}
              value="Star"
            >
              <input
                checked={false}
                className="checkbox c1"
                data-test="star"
                onChange={[Function]}
                type="checkbox"
                value="Star"
              />
            </StyledComponent>
          </styled.input>
          Star
        </label>
      </div>
    </StyledComponent>
  </styled.div>
</TargetTypesSelector>
`;

exports[`TargetTypesSelector should render correctly with target types 1`] = `
.c1.c1 {
  width: 18px;
  height: 18px;
}

.c0.c0 {
  margin-top: 5px;
}

.c0 label {
  padding-right: 10px;
}

<TargetTypesSelector
  onChange={[MockFunction]}
  targetTypes={
    Set {
      "Galaxy",
      "ISM",
    }
  }
>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  && {
    margin-top: 5px;
  }

  label {
    padding-right: 10px;
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <label>
          <styled.input
            checked={true}
            data-test="galaxy"
            onChange={[Function]}
            value="Galaxy"
          >
            <StyledComponent
              checked={true}
              data-test="galaxy"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "className": "checkbox",
                      "type": "checkbox",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  && {
    width: 18px;
    height: 18px;
  }
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onChange={[Function]}
              value="Galaxy"
            >
              <input
                checked={true}
                className="checkbox c1"
                data-test="galaxy"
                onChange={[Function]}
                type="checkbox"
                value="Galaxy"
              />
            </StyledComponent>
          </styled.input>
          Galaxy
        </label>
        <label>
          <styled.input
            checked={true}
            data-test="ism"
            onChange={[Function]}
            value="ISM"
          >
            <StyledComponent
              checked={true}
              data-test="ism"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "className": "checkbox",
                      "type": "checkbox",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  && {
    width: 18px;
    height: 18px;
  }
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onChange={[Function]}
              value="ISM"
            >
              <input
                checked={true}
                className="checkbox c1"
                data-test="ism"
                onChange={[Function]}
                type="checkbox"
                value="ISM"
              />
            </StyledComponent>
          </styled.input>
          ISM
        </label>
        <label>
          <styled.input
            checked={false}
            data-test="solar-system-body"
            onChange={[Function]}
            value="Solar System Body"
          >
            <StyledComponent
              checked={false}
              data-test="solar-system-body"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "className": "checkbox",
                      "type": "checkbox",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  && {
    width: 18px;
    height: 18px;
  }
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onChange={[Function]}
              value="Solar System Body"
            >
              <input
                checked={false}
                className="checkbox c1"
                data-test="solar-system-body"
                onChange={[Function]}
                type="checkbox"
                value="Solar System Body"
              />
            </StyledComponent>
          </styled.input>
          Solar System Body
        </label>
        <label>
          <styled.input
            checked={false}
            data-test="star"
            onChange={[Function]}
            value="Star"
          >
            <StyledComponent
              checked={false}
              data-test="star"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "className": "checkbox",
                      "type": "checkbox",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  && {
    width: 18px;
    height: 18px;
  }
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onChange={[Function]}
              value="Star"
            >
              <input
                checked={false}
                className="checkbox c1"
                data-test="star"
                onChange={[Function]}
                type="checkbox"
                value="Star"
              />
            </StyledComponent>
          </styled.input>
          Star
        </label>
      </div>
    </StyledComponent>
  </styled.div>
</TargetTypesSelector>
`;
